fix: fixed word wrapping in cells

--- a/admin/pages/acc-info/admin-acc-info.css
+++ b/admin/pages/acc-info/admin-acc-info.css
@@ -158,11 +158,13 @@ body {
     overflow: hidden;
 }
 
-    .account-table th, .account-table td {
+.account-table th, .account-table td {
     font-family: "Roboto", sans-serif;
-    padding: 12px 20px; 
+    padding: 12px 20px;
     text-align: left;
-    width: 20%; 
+    max-width: 90px;
+    /* break word enables us to wrap the text into the width of the cell */
+    word-wrap: break-word; 
 }
 
 
