--- a/admin/pages/reports/admin-reports.css
+++ b/admin/pages/reports/admin-reports.css
@@ -162,7 +162,9 @@ body {
     font-family: "Roboto", sans-serif;
     padding: 12px 20px;
     text-align: left;
-    width: 20%; 
+    max-width: 100px;
+    /* break word enables us to wrap the text into the width of the cell */
+    word-wrap: break-word; 
 }
 
 
